Adjusted dist settings.