@@ -1,6 +1,5 @@
 import sbt._
 import Keys._
-import sbt._
 import collection.JavaConverters._
 
 import org.scalatra.sbt._
@@ -12,6 +11,9 @@ import org.scalatra.sbt.DistPlugin.DistKeys._
 import com.mojolly.scalate._
 import com.mojolly.scalate.ScalatePlugin._
 import com.mojolly.scalate.ScalatePlugin.ScalateKeys._
+
+import com.earldouglas.xsbtwebplugin.PluginKeys._
+import com.earldouglas.xsbtwebplugin.WebPlugin._
 
 object Chapter13Build extends Build {
   val Organization = "org.scalatra"
@@ -37,7 +39,9 @@ object Chapter13Build extends Build {
     )
   )
 
-  val myScalatraSettings = ScalatraPlugin.scalatraSettings
+  val myScalatraSettings = ScalatraPlugin.scalatraSettings ++ Seq(
+    port in container.Configuration := 9000
+  )
 
   val myScalateSettings = ScalatePlugin.scalateSettings ++ Seq(
     scalateTemplateConfig in Compile <<= (sourceDirectory in Compile) { base =>
@@ -56,37 +60,14 @@ object Chapter13Build extends Build {
 
   val myDistSettings = DistPlugin.distSettings ++ Seq(
     mainClass in Dist := Some("ScalatraLauncher"),
-    memSetting in Dist := "1g",
-    permMemSetting in Dist := "256m",
+    memSetting in Dist := "2g",
+    permGenSetting in Dist := "256m",
     envExports in Dist := Seq("LC_CTYPE=en_US.UTF-8", "LC_ALL=en_US.utf-8"),
-    javaOptions in Dist <++= (memSetting in Dist, permMemSetting in Dist) map { (mem, perm) =>
-      val rr = Seq(
-        "-Xms" + mem,
-        "-Xmx" + mem,
-        "-XX:PermSize="+perm,
-        "-XX:MaxPermSize="+perm,
-        "-Xss4m",
+    javaOptions in Dist ++= Seq("-Xss4m",
         "-Dfile.encoding=UTF-8",
         "-Dlogback.configurationFile=logback.xml",
         "-Dconfig.file=application.conf",
-        "-Dorg.scalatra.environment=development"
-      )
-      rr
-    },
-    templatesConfig in Dist <<= (templatesConfig in Dist) { templates =>
-      templates
-    },
-    templatesData in Dist <<= (mainClass in Dist, name in Dist, javaOptions in Dist, envExports in Dist,
-      version) map { (mn, nm, jo, ee, ver) =>
-      if (mn.isEmpty) sys.error("You need to specify a main class")
-      Map(
-        "mainClass" -> mn.get,
-        "name" -> nm,
-        "javaOptions" -> jo.asJava,
-        "envExports" -> ee.asJava,
-        "version" -> ver
-      )
-    }
+        "-Dorg.scalatra.environment=development")
   )
 
   val mySettings = myProjectSettings ++ myScalatraSettings ++ myScalateSettings ++ myDistSettings
